--- a/first-task.html
+++ b/first-task.html
@@ -34,5 +34,20 @@
       </tr>
       <tr></tr>
     </table>
+
+    <h2>To do list</h2>
+    <ol>
+      <li>elso</li>
+      <li>masodik</li>
+      <li>harmadik</li>
+      <li>negyedik</li>
+      <li>otodik</li>
+      <li>hatodik</li>
+      <li>hetedik</li>
+      <li>nyolcadik</li>
+      <li>kilencedik</li>
+      <li>tizedik</li>
+
+    </ol>
   </body>
 </html>
