--- a/first-task.html
+++ b/first-task.html
@@ -11,7 +11,7 @@
     />
   </head>
   <body>
-    <h1>Alexandra</h1>
+    <h1><a href="second-task.html">Alexandra</a></h1>
     <table>
       <tr>
         <th rowspan="2"></th>
@@ -47,7 +47,6 @@
       <li>nyolcadik</li>
       <li>kilencedik</li>
       <li>tizedik</li>
-
     </ol>
   </body>
 </html>
