--- a/first-task.html
+++ b/first-task.html
@@ -48,5 +48,22 @@
       <li>kilencedik</li>
       <li>tizedik</li>
     </ol>
+    <div class="canvas">
+      <div id="mypics" class="pics">
+        <img src="style/alpaca.jpg" alt="alpaca pics" />
+      </div>
+      <div id="mypics2" class="pics">
+        <img src="style/alpaca.jpg" alt="alpaca pics" />
+      </div>
+      <div id="mypics3" class="pics">
+        <img src="style/alpaca.jpg" alt="alpaca pics" />
+      </div>
+      <div id="mypics4" class="pics">
+        <img src="style/alpaca.jpg" alt="alpaca pics" />
+      </div>
+      <div id="mypics5" class="pics">
+        <img src="style/alpaca.jpg" alt="alpaca pics" />
+      </div>
+    </div>
   </body>
 </html>
